### To do list: ###

* rendre les icones de batterie et signal clickable pour avoir la valeur exact.

  
### To fix list: ###

* nothing.


### January xx 2021, Release version 0.9.0 ###

  * MODIFIED:
    * all threads have been modified to handle exception logging messages.
    * changed the functions to display data to keep in memory those data and share them with other windows.
    * scrollbar style has been removed from about and option windows as arrows weren't displayed properly at this time.
    * battery and signal icons are now clickable to allow displaying new windows.
    * figures in plot section were moved a bit to fix style issues.
    * MSL pressure is now displayed in the time series section.
    * major and minor ticks have been adjusted.

  * FIXED:
    * cursor wasn't blanked in both textbrowsers of the about window.
    * when clicking on time series button, the first index of the time series stack is now displayed.

  * ADDED:
    * a grid has been added to all graphs.
    * a window for signal quality and battery has been added
    * a window for pressure details has been added.


### December 27 2021, Release version 0.8.2 ###

  * MODIFIED:
    * improved timestamp for data coming from mqtt server.

  * ADDED:
    * logging messages have been added for MqttToDbThread.


### December 26 2021, Release version 0.8.1 ###

  * FIXED:
    * logging wasn't imported in the gui_functions.py file.


### December 26 2021, Release version 0.8.0 ###

  * MODIFIED:
    * changed string format implying variables.
    * change matplotlib logging level to warning.
    * added a function to correct icon and font path for the compiled linux version.
    * changed path coding in utils.py for all functions.
    * changed the way icon are displayed in set_ts_stack_icon function.
    * modified set_ts_stack_icon and set_fc_stack_icon functions for better performance.
    * modified displayed date for better performance.