@@ -1,0 +1,200 @@
+# -*- coding: utf-8 -*-
+
+# Form implementation generated from reading ui file 'temp_hum_details.ui'
+#
+# Created by: PyQt5 UI code generator 5.14.1
+#
+# WARNING! All changes made in this file will be lost!
+
+
+from PyQt5 import QtCore, QtGui, QtWidgets
+
+
+class Ui_temphumWindow(object):
+    def setupUi(self, temphumWindow):
+        temphumWindow.setObjectName("temphumWindow")
+        temphumWindow.resize(340, 245)
+        temphumWindow.setMinimumSize(QtCore.QSize(0, 0))
+        temphumWindow.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(11)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        temphumWindow.setFont(font)
+        temphumWindow.setFocusPolicy(QtCore.Qt.StrongFocus)
+        temphumWindow.setWindowTitle("")
+        temphumWindow.setStyleSheet("QWidget {\n"
+"    background-color: #DEEBF7;\n"
+"    border: 1px solid rgb(75,75,75);\n"
+"}\n"
+"")
+        self.gridLayout_2 = QtWidgets.QGridLayout(temphumWindow)
+        self.gridLayout_2.setObjectName("gridLayout_2")
+        self.gridLayout = QtWidgets.QGridLayout()
+        self.gridLayout.setObjectName("gridLayout")
+        self.label_1 = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.label_1.sizePolicy().hasHeightForWidth())
+        self.label_1.setSizePolicy(sizePolicy)
+        self.label_1.setMinimumSize(QtCore.QSize(0, 0))
+        self.label_1.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.label_1.setFont(font)
+        self.label_1.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.label_1.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
+        self.label_1.setWordWrap(True)
+        self.label_1.setObjectName("label_1")
+        self.gridLayout.addWidget(self.label_1, 0, 0, 1, 1)
+        self.hum_lb = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.hum_lb.sizePolicy().hasHeightForWidth())
+        self.hum_lb.setSizePolicy(sizePolicy)
+        self.hum_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.hum_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.hum_lb.setFont(font)
+        self.hum_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.hum_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.hum_lb.setWordWrap(True)
+        self.hum_lb.setObjectName("hum_lb")
+        self.gridLayout.addWidget(self.hum_lb, 0, 1, 1, 1)
+        self.label_2 = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.label_2.sizePolicy().hasHeightForWidth())
+        self.label_2.setSizePolicy(sizePolicy)
+        self.label_2.setMinimumSize(QtCore.QSize(0, 0))
+        self.label_2.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.label_2.setFont(font)
+        self.label_2.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.label_2.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
+        self.label_2.setWordWrap(True)
+        self.label_2.setObjectName("label_2")
+        self.gridLayout.addWidget(self.label_2, 1, 0, 1, 1)
+        self.temp_lb = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.temp_lb.sizePolicy().hasHeightForWidth())
+        self.temp_lb.setSizePolicy(sizePolicy)
+        self.temp_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.temp_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.temp_lb.setFont(font)
+        self.temp_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.temp_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.temp_lb.setWordWrap(True)
+        self.temp_lb.setObjectName("temp_lb")
+        self.gridLayout.addWidget(self.temp_lb, 1, 1, 1, 1)
+        self.label_3 = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.label_3.sizePolicy().hasHeightForWidth())
+        self.label_3.setSizePolicy(sizePolicy)
+        self.label_3.setMinimumSize(QtCore.QSize(0, 0))
+        self.label_3.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.label_3.setFont(font)
+        self.label_3.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.label_3.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
+        self.label_3.setWordWrap(True)
+        self.label_3.setObjectName("label_3")
+        self.gridLayout.addWidget(self.label_3, 2, 0, 1, 1)
+        self.dew_lb = QtWidgets.QLabel(temphumWindow)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Preferred)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.dew_lb.sizePolicy().hasHeightForWidth())
+        self.dew_lb.setSizePolicy(sizePolicy)
+        self.dew_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.dew_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setPointSize(18)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.dew_lb.setFont(font)
+        self.dew_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"}")
+        self.dew_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.dew_lb.setWordWrap(True)
+        self.dew_lb.setObjectName("dew_lb")
+        self.gridLayout.addWidget(self.dew_lb, 2, 1, 1, 1)
+        self.gridLayout_2.addLayout(self.gridLayout, 0, 0, 1, 1)
+        self.ok_button = QtWidgets.QToolButton(temphumWindow)
+        self.ok_button.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.ok_button.sizePolicy().hasHeightForWidth())
+        self.ok_button.setSizePolicy(sizePolicy)
+        self.ok_button.setMinimumSize(QtCore.QSize(80, 80))
+        self.ok_button.setMaximumSize(QtCore.QSize(16777215, 80))
+        self.ok_button.setStyleSheet("QToolButton {\n"
+"    border: 1px solid transparent;\n"
+"    border-radius: 10px;\n"
+"    background-color: transparent;\n"
+"    width: 27px;\n"
+"    height: 27px;\n"
+"}\n"
+"\n"
+"QToolButton:flat {\n"
+"    border: none;\n"
+"}")
+        self.ok_button.setText("")
+        icon = QtGui.QIcon()
+        icon.addPixmap(QtGui.QPixmap("icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        self.ok_button.setIcon(icon)
+        self.ok_button.setIconSize(QtCore.QSize(50, 50))
+        self.ok_button.setObjectName("ok_button")
+        self.gridLayout_2.addWidget(self.ok_button, 1, 0, 1, 1)
+
+        self.retranslateUi(temphumWindow)
+        QtCore.QMetaObject.connectSlotsByName(temphumWindow)
+
+    def retranslateUi(self, temphumWindow):
+        _translate = QtCore.QCoreApplication.translate
+        self.label_1.setText(_translate("temphumWindow", "Humidité :"))
+        self.hum_lb.setText(_translate("temphumWindow", "100 %"))
+        self.label_2.setText(_translate("temphumWindow", "Température :"))
+        self.temp_lb.setText(_translate("temphumWindow", "20 °C"))
+        self.label_3.setText(_translate("temphumWindow", "Point de rosée :"))
+        self.dew_lb.setText(_translate("temphumWindow", "15 °C"))
